Updating to XCore 1.1.7